--- a/dev-roberto/templates/cadastro.html
+++ b/dev-roberto/templates/cadastro.html
@@ -9,20 +9,20 @@
 
         <h1>Crie sua conta</h1>
         <div>
-            <label for="nome"></label>
-            <input type="text" id="nome" name="nome" placeholder="seu nome" autofocus required>
+            <label for="nome">Nome usuario</label>
+            <input type="text" id="nome" name="user-name" placeholder="seu nome" autofocus required>
         </div>
         <div>
-            <label for="email"></label>
+            <label for="email">e-mail</label>
             <input type="email" id="email" name="email" placeholder="email" required>
         </div>
         <div>
-            <label for="pass"></label>
-            <input type="password" id="pass" name="pass" placeholder="digite sua senha" required>
+            <label for="pass">Senha</label>
+            <input type="password" id="pass" name="password" placeholder="digite sua senha" required>
         </div>
         <div>
-            <label for="pass"></label>
-            <input type="password" id="pass" name="pass" placeholder="confirme sua senha" required>
+            <label for="pass">Confirmar senha</label>
+            <input type="password" id="pass" name="password-confirm" placeholder="confirme sua senha" required autocomplete="off">
         </div>
         <a href="#"><input type="submit" value="continuar" class="btm"></a>
 
