--- a/dev-roberto/templates/index.html
+++ b/dev-roberto/templates/index.html
@@ -17,10 +17,9 @@
             <div class="menu">
                 <ul>
                     <li><a href="/login">login</a></li>
-                    <li><a href="/cadastro">venda na Mercado Digital</a></li>
+                    <li><a href="/cadastro">Cadastro</a></li>
                     <li><a href="#">Ofertas do Dia</a></li>
                     <li><a href="#">Mais Vendidos</a></li>
-                    <a href="https://cosampa.gpm.srv.br/" target="_blank">GPM</a> 
                 </ul>
             </div>
         </nav>
