--- a/lucas/css/estilo.css
+++ b/lucas/css/estilo.css
@@ -1,205 +1,246 @@
-body{
-    background-color: #ffffff;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-h1,h2,h3,h4,p{
-    font-family: "Oxygen";
-}
-header{
-    width: 100%;
-    height: 100%;
-    background-color: #8d50ff;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+body {
+  background-color: #ffffff;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 
 }
-.cabecario{
-    display: flex;
-    align-items: center;
+
+h1,
+h2,
+h3,
+h4,
+p {
+  font-family: 'Amazon Ember', Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #000;
+}
+
+header {
+  width: 100%;
+  background-color: #8d50ff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#logo-2{
+  margin-top: -9px;
+}
+
+.cabecario {
+  display: flex;
+  align-items: center;
 
 }
-.texto-logo{
-    height: 100px;
-    margin: 5px 70px;
-    margin-top: 30px;
+
+.texto-logo {
+  height: 100px;
+  margin: 5px 70px;
+  margin-top: 30px;
 }
-.menu li{
-    display: inline-block;
-    margin: 0px 9px;
+
+.menu li {
+  display: inline-block;
+  margin: 0px 9px;
 }
-.menu li a{
-    font-size: 20px;
-    font-family: sans-serif;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    transition: color .3s linear;
+
+.menu li a {
+  font-size: 20px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  transition: color .3s linear;
 }
-.menu li a:hover{
-    color: #dbff22;
+
+.menu li a:hover {
+  color: #dbff22;
 }
-.pesquisa{
-    margin-left: 7%;
-    margin-top: 15px;
-    width: 80%;
-    height: 30px;
-    border: 10px;
-    border-radius: 10px;
+
+.pesquisa {
+  margin-left: 7%;
+  margin-top: 15px;
+  width: 80%;
+  height: 30px;
+  border: 10px;
+  border-radius: 10px;
 }
-.fa-magnifying-glass{
-    background-color:#dbff22;
-    border: 5px solid #dbff22;
-    color: #000000;
-    padding:10px;
-    border-radius: 100px;
-    font-size: 15px;
-    cursor: pointer;
+
+.fa-magnifying-glass {
+  background-color: #dbff22;
+  border: 5px solid #dbff22;
+  color: #000000;
+  padding: 10px;
+  border-radius: 100px;
+  font-size: 15px;
+  cursor: pointer;
 }
-.button{
-    background-color: #8d50ff;
-    border: transparent;
+
+.button {
+  background-color: #8d50ff;
+  border: transparent;
 }
-.menu-2 li{
-    display: inline-block;
-    margin: 0px 9px;
+
+.menu-2 li {
+  display: inline-block;
+  margin: 0px 9px;
 }
-.menu-2 li a{
-    font-size: 18px;
-    font-family: sans-serif;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    text-transform: uppercase;
-    transition: color .3s linear;
+
+.menu-2 li a {
+  font-size: 18px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  transition: color .3s linear;
 }
-.menu-2 li a:hover{
-    color: #8d50ff;
+
+.menu-2 li a:hover {
+  color: #8d50ff;
 }
-.menu-color{
-    width: 100%;
-    height: 30px;
-    background-color: #dbff22;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+
+.menu-color {
+  width: 100%;
+  height: 30px;
+  background-color: #dbff22;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .slideshow-container {
-    position: relative;
-    height: 400px;
-    width: 100%;
-  }
-  
-  .slideshow-slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-  }
-  
-  .slideshow-slide.active {
-    opacity: 1;
-  }
+  position: relative;
+  height: 400px;
+  width: 100%;
+}
 
+.slideshow-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slideshow-slide.active {
+  opacity: 1;
+}
 
 .anuncio-blocos {
-    display: flex;
-    justify-content: space-between;
-  }
+  display: flex;
+  justify-content: space-between;
+}
+
 .anuncio {
-    width: 300px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-top: -10px;
-    margin-bottom: 20px;
-    margin-left: 30px;
-  }
-  
-  .anuncio img {
-    display: block;
-    margin: 0 auto;
-    width: 30%;
-    height: auto;
-    margin-bottom: 10px;
-  }
-  
-  .anuncio h3 {
-    font-size: 1.2rem;
-    margin: 0;
-    margin-bottom: 5px;
-    text-align: center;
-  }
-  
-  .anuncio .preco {
-    font-size: 1.1rem;
-    display: block;
-    text-align: center;  
-    margin-bottom: 10px;
-  }
-  
-  .anuncio .botao-comprar, .anuncio .botao-adicionar {
-    display: inline-block;
-    background-color: #dbff22;
-    color: #000000;
-    padding: 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-right: 10px;
-    margin-left: 10px;
-    text-align: center;
-  }
-  .anuncio .botao-comprar:hover, .anuncio .botao-adicionar:hover {
-    background-color: #c55000;
-  }
+  width: 300px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: -10px;
+  margin-bottom: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.anuncio p h3{
+  flex-grow: 1;
+}
+
+.anuncio h3 {
+  font-size: 1.2rem;
+  margin: 0;
+  margin-bottom: 5px;
+  text-align: center;
+  flex-grow: 1;
+}
+
+.anuncio img {
+  display: block;
+  margin: 0 auto;
+  width: 30%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.anuncio .preco {
+  font-size: 1.1rem;
+  display: block;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.anuncio .botao-comprar,
+.anuncio .botao-adicionar {
+  display: inline-block;
+  background-color: #dbff22;
+  color: #000000;
+  padding: 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin: 1%;
+  margin-right: 10px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.anuncio .botao-comprar:hover,
+.anuncio .botao-adicionar:hover {
+  background-color: #8d50ff;
+}
 
 .container-4 {
-    padding: 10px;
-    overflow-x: scroll;
-    display: flex;
-    flex-direction: row;
-    margin-top: 3rem;
-  }
-  
-.scroll-left-btn-1, .scroll-right-btn-1 {
-    position: absolute;
-    top: 50%; /* posição desejada */
-    transform: translateY(-50%);
-    z-index: 1;
-    background-color: transparent;
-    border: none;
-    color: #000000;
-    font-size: 24px;
-    cursor: pointer;
-  }
-  
-.scroll-left-btn-1 {
-    left: 10px; /* posição desejada */
-    margin-top: 450px;
-   
-  }
-  
-.scroll-right-btn-1 {
-    right: 10px; /* posição desejada */
-    margin-top: 450px;
-  }
-  
-.container-4::-webkit-scrollbar {
-    display: none; /* esconder a barra de rolagem nativa do navegador */
-  }
+  padding: 10px;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  margin-top: 3rem;
+}
 
-.scroll-left-btn-1, .scroll-right-btn-1{
-    background-color: rgb(0, 0, 255);
-    border: 2px solid rgb(0, 0, 255);
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    border-radius: 10px;
-    font-size: .8em;
-    
+.scroll-left-btn-1,
+.scroll-right-btn-1 {
+  position: absolute;
+  top: 50%;
+  /* posição desejada */
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  color: #000000;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.scroll-left-btn-1 {
+  left: 10px;
+  /* posição desejada */
+  margin-top: 520px;
+
+}
+
+.scroll-right-btn-1 {
+  right: 10px;
+  /* posição desejada */
+  margin-top: 520px;
+}
+
+.container-4::-webkit-scrollbar {
+  display: none;
+  /* esconder a barra de rolagem nativa do navegador */
+}
+
+.scroll-left-btn-1,
+.scroll-right-btn-1 {
+  background-color: rgb(0, 0, 255);
+  border: 2px solid rgb(0, 0, 255);
+  color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  font-size: .8em;
+
 }
 
 .container-4-1 {
@@ -210,11 +251,12 @@ header{
   margin-top: 3rem;
 }
 
-.scroll-left-btn-2, .scroll-right-btn-2 {
+.scroll-left-btn-2,
+.scroll-right-btn-2 {
   position: absolute;
-  top: 50%; /* posição desejada */
+  top: 50%;
+  /* posição desejada */
   transform: translateY(-50%);
-  z-index: 1;
   background-color: transparent;
   border: none;
   color: #000000;
@@ -223,27 +265,161 @@ header{
 }
 
 .scroll-left-btn-2 {
-  left: 10px; /* posição desejada */
-  margin-top: 850px;
- 
+  left: 10px;
+  /* posição desejada */
+  margin-top: 1034px;
+
 }
 
 .scroll-right-btn-2 {
-  right: 10px; /* posição desejada */
-  margin-top: 850px;
+  right: 10px;
+  /* posição desejada */
+  margin-top: 1034px;
 }
 
 .container-4-1::-webkit-scrollbar {
-  display: none; /* esconder a barra de rolagem nativa do navegador */
+  display: none;
+  /* esconder a barra de rolagem nativa do navegador */
 }
 
-.scroll-left-btn-2, .scroll-right-btn-2{
+.scroll-left-btn-2,
+.scroll-right-btn-2 {
   background-color: rgb(0, 0, 255);
   border: 2px solid rgb(0, 0, 255);
   color: rgb(255, 255, 255);
   padding: 10px;
   border-radius: 10px;
   font-size: .8em;
+
+}
+
+.container-4-2 {
+  padding: 10px;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  margin-top: 3rem;
+}
+
+.scroll-left-btn-3,
+.scroll-right-btn-3 {
+  position: absolute;
+  top: 50%;
+  /* posição desejada */
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  color: #000000;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.scroll-left-btn-3 {
+  left: 10px;
+  /* posição desejada */
+  margin-top: 1549px;
+
+}
+
+.scroll-right-btn-3 {
+  right: 10px;
+  /* posição desejada */
+  margin-top: 1549px;
+}
+
+.container-4-2::-webkit-scrollbar {
+  display: none;
+  /* esconder a barra de rolagem nativa do navegador */
+}
+
+.scroll-left-btn-3,
+.scroll-right-btn-3 {
+  background-color: rgb(0, 0, 255);
+  border: 2px solid rgb(0, 0, 255);
+  color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  font-size: .8em;
+}
+
+.bntcar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  font-size: 35px;
+  border-radius: 100%;  
+  right: 10px;
+  bottom: 10px;
+  background-color: #dbff22;
+  padding: 40px;
+  cursor: pointer;
+  opacity: 0.9;
+  z-index: 1;
+}
+
+.bntcar:hover{
+  background: #8d50ff;
+}
+
+.logincliente{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  font-size: 35px;
+  border-radius: 100%;  
+  right: 10px;
+  bottom: 100px;
+  background-color: #dbff22;
+  padding: 40px;
+  cursor: pointer;
+  opacity: 0.9;
+  z-index: 1;
+}
+
+.logincliente:hover{
+  background: #8d50ff;
+}
+
+/* Estilos para telas menores */
+
+@media only screen and (max-width: 767px) {
+  /* Ocultar o slideshow */
+  .slideshow-container {
+    display: none;
+  }
+
+  /* Estilos para o menu responsivo */
+  nav {
+    display: none;
+  }
   
+  .scroll-left-btn-1,
+  .scroll-right-btn-1 {
+    display: none;
+  }
+  .scroll-left-btn-2,
+  .scroll-right-btn-2 {
+    display: none;
+  }
+  .scroll-left-btn-3,
+  .scroll-right-btn-3 {
+    display: none;
+  }
+
+}
+
+/* Estilos para telas maiores */
+@media only screen and (min-width: 767px) {
+
+  .logincliente{
+    display: none;
+  }
+ 
 }
 
