--- a/lucas/css/cadastro.css
+++ b/lucas/css/cadastro.css
@@ -1,15 +1,18 @@
-
 body{
-    background-color: #483d5b;
+    background-color: #ffffff;
     font-family:'Times New Roman', Times, serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 .semfundo{
-    width: 10%;
+    width: 250px;
+    position: absolute;
 }
 h1{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: normal;
-    color: #483d5b;
+    color: #000000;
     font-size: 20px;
     text-align: center;
 }
@@ -18,10 +21,11 @@ h1{
     margin-left: 30%;
 }
 .formlogin fieldset{
-    background: #8d50ff;
-    box-shadow: 2px 2px 2px #000000;
-    border: 0;
-    border-radius: 20px;
+    background: #ffffff;
+    box-shadow: 2px 2px 5px #959595;
+    border: 1px solid;
+    border-radius: 10px;
+    margin-top: 100px;
     position: absolute;
 }
 .formlogin label{
@@ -37,13 +41,13 @@ h1{
     font-size: 20px;
     font-family: sans-serif;
     border-radius: 10px;
-    border: none;
+    border: 1px solid #000000;
     margin-bottom: 15px;
 }
 .btm{
     margin-top: 15px;
     background-color:#dbff22;
-    border: 5px solid #dbff22;
+    border: 1px solid #dbff22;
     color: #000000;
     font-family:'Times New Roman', Times, serif;
     padding:10px;
@@ -51,3 +55,18 @@ h1{
     font-size: 15px;
     cursor: pointer;
 }
+a input[type="submit"]:hover{
+    background-color: #8d50ff;
+}
+
+.fixarRodape {
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    background: #8d50ff;
+    padding: 10px;
+    font-size: 12px;
+    color: #dbff22;
+    letter-spacing: 5px;
+  }
