--- a/lucas/css/login.css
+++ b/lucas/css/login.css
@@ -6,7 +6,6 @@ body {
 }
 header {
   width: 100%;
-  height: 100%;
   background-color: #8d50ff;
   display: flex;
   justify-content: space-around;
@@ -58,11 +57,10 @@ h1 {
   bottom: 0;
   position: fixed;
   width: 100%;
-  text-align: center;
   background: #8d50ff;
-  padding: 25px;
+  padding: 10px;
   font-size: 12px;
-  color: #00ff43;
+  color: #dbff22;
   letter-spacing: 5px;
   text-align: center;
 }
