--- a/lucas/css/login.css
+++ b/lucas/css/login.css
@@ -1,64 +1,32 @@
-body {
-  background-color: #ffffff;
-  padding: 0;
+html, body {
+  height: 100%;
   margin: 0;
-  box-sizing: border-box;
-}
-header {
-  width: 100%;
-  background-color: #8d50ff;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.cabecario {
-  display: flex;
-  align-items: center;
-}
-.texto-logo {
-  height: 100px;
-  margin: 5px 70px;
-  margin-top: 30px;
-}
-.formlogin fieldset {
-  border-color: #e7e7e7;
-  width: 400px;
-  height: 110px;
-  margin-left: 35%;
-  margin-top: 50px;
-  border-radius: 10px;
-}
-h1 {
-  margin-top: 50px;
-  text-align: center;
-}
-#text {
-  width: 300px;
-  box-sizing: border-box;
-  padding: 10px;
-  font-size: 20px;
-  border-radius: 10px;
-  border: 1px solid;
-}
-.btm {
-  margin-top: 15px;
-  background-color: #dbff22;
-  border: 1px solid #dbff22;
-  color: #000000;
-  padding: 10px;
-  border-radius: 100px;
-  font-size: 15px;
-  cursor: pointer;
+  flex-direction: column;
 }
 
-.fixarRodape {
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  background: #8d50ff;
-  padding: 10px;
-  font-size: 12px;
-  color: #dbff22;
-  letter-spacing: 5px;
-  text-align: center;
+body {
+  display: flex;
+  flex-direction: column;
 }
+
+header {
+  flex-shrink: 0;
+}
+
+h1, .formlogin {
+  flex-grow: 1; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  flex-shrink: 0; 
+  color: white;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+}
+
