--- a/lucas/css/estilo.css
+++ b/lucas/css/estilo.css
@@ -113,7 +113,7 @@ header {
 .slideshow-container {
   text-align: center;
   position: relative;
-  height: 400px; /* Restaurado ao tamanho original */
+  height: 400px;
   width: 100%;
   overflow: hidden;
 }
@@ -207,108 +207,19 @@ header {
   margin-right: 10px;
   margin-left: 10px;
   text-align: center;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .anuncio .botao-comprar:hover,
 .anuncio .botao-adicionar:hover {
   background-color: #8d50ff;
+  color: #fff;
 }
 
-.container-4 {
-  padding: 10px;
-  overflow-x: scroll;
-  display: flex;
-  flex-direction: row;
-  margin-top: 3rem;
-}
-
-.scroll-left-btn-1,
-.scroll-right-btn-1 {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: transparent;
-  border: none;
-  color: #000000;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.scroll-left-btn-1 {
-  left: 10px;
-  margin-top: 600px;
-}
-
-.scroll-right-btn-1 {
-  right: 10px;
-  margin-top: 600px;
-}
-
-.container-4::-webkit-scrollbar {
-  display: none;
-}
-
-.scroll-left-btn-1,
-.scroll-right-btn-1 {
-  background-color: rgb(0, 0, 255);
-  border: 2px solid rgb(0, 0, 255);
-  color: rgb(255, 255, 255);
-  padding: 10px;
-  border-radius: 10px;
-  font-size: .8em;
-}
-
-.container-4-1 {
-  padding: 10px;
-  overflow-x: scroll;
-  display: flex;
-  flex-direction: row;
-  margin-top: 3rem;
-}
-
-.suple {
-  width: 200px;
-  height: 250px;
-  margin-top: 5%;
-  padding: 10px;
-}
-
-.scroll-left-btn-2,
-.scroll-right-btn-2 {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: transparent;
-  border: none;
-  color: #000000;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.scroll-left-btn-2 {
-  left: 10px;
-  margin-top: 2000px;
-}
-
-.scroll-right-btn-2 {
-  right: 10px;
-  margin-top: 2000px;
-}
-
-.container-4-1::-webkit-scrollbar {
-  display: none;
-}
-
-.scroll-left-btn-2,
-.scroll-right-btn-2 {
-  background-color: rgb(0, 0, 255);
-  border: 2px solid rgb(0, 0, 255);
-  color: rgb(255, 255, 255);
-  padding: 10px;
-  border-radius: 10px;
-  font-size: .8em;
-}
-
+.container-4,
+.container-4-1,
 .container-4-2 {
   padding: 10px;
   overflow-x: scroll;
@@ -317,6 +228,10 @@ header {
   margin-top: 3rem;
 }
 
+.scroll-left-btn-1,
+.scroll-right-btn-1,
+.scroll-left-btn-2,
+.scroll-right-btn-2,
 .scroll-left-btn-3,
 .scroll-right-btn-3 {
   position: absolute;
@@ -329,20 +244,23 @@ header {
   cursor: pointer;
 }
 
-.scroll-left-btn-3 {
-  left: 10px;
-  margin-top: 1330px;
-}
+.scroll-left-btn-1 { left: 10px; margin-top: 600px; }
+.scroll-right-btn-1 { right: 10px; margin-top: 600px; }
+.scroll-left-btn-2 { left: 10px; margin-top: 2000px; }
+.scroll-right-btn-2 { right: 10px; margin-top: 2000px; }
+.scroll-left-btn-3 { left: 10px; margin-top: 1330px; }
+.scroll-right-btn-3 { right: 10px; margin-top: 1330px; }
 
-.scroll-right-btn-3 {
-  right: 10px;
-  margin-top: 1330px;
-}
-
+.container-4::-webkit-scrollbar,
+.container-4-1::-webkit-scrollbar,
 .container-4-2::-webkit-scrollbar {
   display: none;
 }
 
+.scroll-left-btn-1,
+.scroll-right-btn-1,
+.scroll-left-btn-2,
+.scroll-right-btn-2,
 .scroll-left-btn-3,
 .scroll-right-btn-3 {
   background-color: rgb(0, 0, 255);
@@ -351,6 +269,13 @@ header {
   padding: 10px;
   border-radius: 10px;
   font-size: .8em;
+}
+
+.suple {
+  width: 200px;
+  height: 250px;
+  margin-top: 5%;
+  padding: 10px;
 }
 
 .bntcar {
@@ -466,7 +391,9 @@ footer {
   border: 1px solid #8d50ff;
 }
 
-#lista-carrinho li button {
+#lista-carrinho li button,
+#fechar-carrinho,
+#finalizar-compra {
   background-color: #dbff22;
   border: none;
   padding: 5px 10px;
@@ -477,7 +404,9 @@ footer {
   margin-top: 5px;
 }
 
-#lista-carrinho li button:hover {
+#lista-carrinho li button:hover,
+#fechar-carrinho:hover,
+#finalizar-compra:hover {
   background-color: #8d50ff;
   color: #fff;
 }
@@ -489,23 +418,6 @@ footer {
 
 #lista-carrinho li .remover:hover {
   background-color: #cc0000;
-}
-
-#fechar-carrinho {
-  display: block;
-  width: 100%;
-  background-color: #8d50ff;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
-}
-
-#fechar-carrinho:hover {
-  background-color: #6b3ecc;
 }
 
 .contador {
@@ -526,32 +438,28 @@ footer {
 
 @media only screen and (max-width: 767px) {
   .slideshow-container {
-    display: none;
+      display: none;
   }
   nav {
-    display: none;
+      display: none;
   }
   .scroll-left-btn-1,
-  .scroll-right-btn-1 {
-    display: none;
-  }
+  .scroll-right-btn-1,
   .scroll-left-btn-2,
-  .scroll-right-btn-2 {
-    display: none;
-  }
+  .scroll-right-btn-2,
   .scroll-left-btn-3,
   .scroll-right-btn-3 {
-    display: none;
+      display: none;
   }
   .carrinho {
-    width: 90%;
-    right: 5%;
-    top: 60px;
+      width: 90%;
+      right: 5%;
+      top: 60px;
   }
 }
 
 @media only screen and (min-width: 767px) {
   .logincliente {
-    display: none;
+      display: none;
   }
 }
